# BetBog13

./: .replit  advanced_strategies.py  api_client.py  bot.py  config.py  data_collector.py  database.py  direct_telegram_bot.py  football_strategies.py  historical_analyzer.py  last_100_logs.txt  logger.py  main.py  match_monitor.py  metrics_calculator.py  ml_optimizer.py  models.py  pyproject.toml  real_telegram_bot.py  result_tracker.py  signals_summary.txt  simple_bot.py  simple_menu_bot.py  simple_optimizer.py  strategies.py  strategy_optimizer.py  team_stats_cache.py  telegram_menu_bot.py  test_telegram.py  tick_analyzer.py
