[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.6",
    "asyncpg>=0.30.0",
    "colorama>=0.4.6",
    "numpy>=2.2.6",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot[all]>=22.1",
    "sqlalchemy>=2.0.41",
]
